[project]
name = "iv-surface"
version = "0.1.0"
description = "Implied Volatility Surface Construction for Options"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "yfinance>=0.2.28",
    "py-vollib>=1.0.1",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
iv-surface = "iv_surface.main:main"